@@ -79,9 +79,13 @@ table <- function (..., exclude = if (useNA=="no") c(NA, NaN),
             ## from the <NA> factor level, but these
             ## excluded levels must NOT EVER be tabulated.
             op <- options(warn = 2) ## prevent non-sensical factor() creation: turn warnings into errors
-            a <- # NB: this excludes first, unlike the is.factor() case
+            ## Catch errors so we can safely reset the warning level
+            a <- try(
+                ## NB: this excludes first, unlike the is.factor() case
                 factor(a, exclude = exclude)
+            , silent=TRUE)
             options(op)
+            if(inherits(a, "try-error")) stop(attr(a, "condition"))
         }
 
 	## if(doNA)
